@@ -829,6 +829,9 @@ Release 0.19.1 - Unreleased
 
     HADOOP-5193. Correct calculation of edits modification time. (shv)
 
+    HADOOP-4494. Allow libhdfs to append to files.
+    (Pete Wyckoff via dhruba)
+
 Release 0.19.0 - 2008-11-18
 
   INCOMPATIBLE CHANGES
